# OmniVoiceTTS

./: .dockerignore  .gitignore  Dockerfile  README.md  Taskfile.yml  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: docker-build-rocm.yml  docker-build-tiny.yml  docker-build.yml
benchmarks/: BENCHMARKS.md  CPU_MEMORY.md  PREWARM_DIRECT_REFERENCE.md  PREWARM_PREDEFINED.md  PREWARM_RANDOM.md  WARM_DIRECT_REFERENCE.md  WARM_PREDEFINED.md  WARM_RANDOM.md  cpu-memory.json  example-generation.json
docs/: dockerhub.md
examples/: README.md  index.html  player.js  voices.js
examples/assets/: manifest.json
omnivoice/: __init__.py  app.py  client.py  prefetch_assets.py  ui_translations.json
omnivoice/cli/: demo.py  infer.py  infer_batch.py
omnivoice/models/: omnivoice.py
omnivoice/service/: __init__.py  audio.py  paths.py
omnivoice/utils/: audio.py  data_utils.py  lang_map.py  text.py
omnivoice/web/: __init__.py  branding.py  gpu.py  openai_profiles.py  translations.py
scripts/: benchmark-cpu-memory.py  benchmark-example-generation.py  local-processes.ps1  release.ps1
