[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omnivoice"
version = "0.1.0.dev0"
description = "Hangry Labs OmniVoiceTTS: easy-to-run multilingual zero-shot text-to-speech"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13, <3.14"
authors = [{name = "Han Zhu"}]
keywords = [
    "tts",
    "text-to-speech",
    "speech-synthesis",
    "zero-shot",
    "multilingual",
    "diffusion",
    "voice-cloning",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",

    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",

    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "accelerate==1.13.0",
    "fastapi==0.136.1",
    "gradio==6.14.0",
    "huggingface-hub==1.14.0",
    "librosa==0.11.0",
    "numpy==2.4.4",
    "pydub==0.25.1",
    "pydantic==2.13.4",
    "soundfile==0.13.1",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "transformers==5.8.0",
    "uvicorn[standard]==0.46.0",
]

[project.scripts]
omnivoice-infer = "omnivoice.cli.infer:main"
omnivoice-infer-batch = "omnivoice.cli.infer_batch:main"
omnivoice-demo = "omnivoice.cli.demo:main"
omnivoice-serve = "omnivoice.app:main"

[project.urls]
Homepage = "https://github.com/Hangry-Labs/OmniVoiceTTS"
Repository = "https://github.com/Hangry-Labs/OmniVoiceTTS"
"Upstream Project" = "https://github.com/k2-fsa/OmniVoice"
"Bug Tracker" = "https://github.com/Hangry-Labs/OmniVoiceTTS/issues"

[tool.uv.sources]
# Install PyTorch with CUDA support on Linux/Windows (CUDA doesn't exist for Mac).
# NOTE: We must explicitly request them as `dependencies` above. These improved
# versions will not be selected if they're only third-party dependencies.
torch = [
  { index = "pytorch-cuda", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cuda", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cuda"
# Use PyTorch built for NVIDIA Toolkit version 12.8.
# Available versions: https://pytorch.org/get-started/locally/
url = "https://download.pytorch.org/whl/cu128"
# Only use this index when explicitly requested by `tool.uv.sources`.
explicit = true

[tool.hatch.build.targets.sdist]
include = ["omnivoice"]

[tool.hatch.build.targets.wheel]
packages = ["omnivoice"]
